# em68k

./: .gitignore  Cargo.toml  LICENSE  README.md  a.out  em68k.py  test.hex
examples/: ST0001 Mono Demos.st  TOS104SU.S  abcd.asm  abcd.lst  add.asm  add.hex  loop.asm  loop.hex  move_direct.asm  srec2bin.py  strtolower.asm  strtolower.hex  test1.hex  test3.hex  test3.lst  test4.asm  test4.hex  test4.lst  test5.asm  test5.hex  test5.lst  tos.asm
src/: atari.rs  conversions.rs  devices.rs  fields.rs  instructions.rs  lib.rs  main.rs  memory.rs  parser.rs  processor.rs  temp
tests/: opcode_tests.asm  opcode_tests.lst  opcode_tests_easy68k.L68  opcode_tests_easy68k.S68  opcode_tests_easy68k.x68  test.s68  tests.rs
utils/: prgshow  prgshow.c
