[package]
name = "em68k"
version = "0.1.0"
authors = ["Christian Kuhl <christian.kuhl84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "em68k"
path = "src/lib.rs"

[[bin]]
name = "myatari"
path = "src/main.rs"

[dependencies]
termion = "1.5"
minifb = "0.19.3"
timer = "0.2.0"
chrono = "0.2.19"